@@ -1,8 +1,12 @@
 `summary.prc` <-
-    function (object, axis = 1, scaling = 2, digits = 4, ...)
+    function (object, axis = 1, scaling = 3, digits = 4, ...) 
 {
-    species <- drop(scores(object, scaling = scaling, display="sp", choices=axis))
-    b <- coef(object)[, axis]
+    species <- drop(scores(object, scaling = scaling, display="sp",
+                           choices=axis, ...))
+    sites <- drop(scores(object, scaling = scaling, display="lc",
+                         choices=axis, ... )) 
+    ## coef for scaled sites (coef(object) gives for orthonormal)
+    b <- qr.coef(object$CCA$QR, sites)
     prnk <- object$pCCA$rank
     lentreat <- length(object$terminfo$xlev[[2]])
     lenb <- length(b)
@@ -12,8 +16,8 @@
     b <- cbind(bx, matrix(by, nrow = lentreat - 1, byrow = TRUE))
     rownames(b) <- (object$terminfo$xlev[[2]])[-1]
     colnames(b) <- object$terminfo$xlev[[1]]
-    out <- list(sp = species, coefficients = b, names = names(object$terminfo$xlev),
-                corner = (object$terminfo$xlev[[2]])[1], call = object$call,
+    out <- list(sp = species, coefficients = b, names = names(object$terminfo$xlev), 
+                corner = (object$terminfo$xlev[[2]])[1], call = object$call, 
                 digits = digits)
     class(out) <- "summary.prc"
     out
